[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Rock.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/RockGroup.gd" type="Script" id=2]

[node name="RockGroup" type="Area2D" groups=["rock_groups"]]
script = ExtResource( 2 )

[node name="YSort" type="YSort" parent="."]
z_index = 1

[node name="Rock" parent="YSort" instance=ExtResource( 1 )]

[connection signal="input_event" from="." to="." method="_on_RockGroup_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_RockGroup_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_RockGroup_mouse_exited"]
